- feature - syntax uses "~" as hidden early-order character: to control syntax suggestion order. - feature - can have up to 1000 suggestions at once - bug fix - having parameter at start doesn't highlight parameter - bug fix - bug on syntax containing quotes - bug fix - shortcut syntax description ui goes behind new editors - bug fix - default advanced dice roller shortcut has stray " in About - internal - added some commented lines to uncomment for help during dev

--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,7 @@
 	right: 2em;
 	bottom: 1em;
 	display: none;
+	z-index: 100;
 }
 .iscript_suggestionDescription_above
 {
